[project]
name = "freqtrade-okx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.29.4",
    "freqtrade>=2026.5.1",
    "optuna>=4.9.0",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
# 第三方 vendored 策略（NostalgiaForInfinityX7，73k 行）跟隨官方 repo 更新，不自行 lint/改動。
# 其餘維持 ruff 預設規則（無自訂 select/ignore）。
extend-exclude = ["user_data/strategies/NostalgiaForInfinityX7.py"]
